added the searchview in action menu

--- a/app/src/main/res/layout-w900dp/activity_main.xml
+++ b/app/src/main/res/layout-w900dp/activity_main.xml
@@ -10,13 +10,7 @@
               android:divider="?android:attr/dividerHorizontal"
               android:orientation="horizontal"
               android:showDividers="middle"
-              tools:context=".ItemListActivity">
-
-    <!--
-    This layout is a two-pane layout for the Items
-    master/detail flow.
-    
-    -->
+              tools:context=".MainActivity">
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
