--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -5,8 +5,8 @@
       tools:context=".MainActivity">
 
     <item
-            android:id="@+id/mi_search"
-            android:title="search something"
+            android:id="@+id/m_search"
+            android:title="@string/search_title"
             app:showAsAction="always"
             app:actionViewClass="android.support.v7.widget.SearchView"
     />
